# workshop_mlr

./: .gitignore  .gitmodules  README.md  environment.yml  know_issue.md  setup.md
examples/gym/: 0_basic.ipynb  0_basic.py  getting_start.py  getting_start_video.py  getting_started copy.ipynb  getting_started.ipynb  getting_started.mod.py  video-recording.py
examples/panda-gym/: 1_random_policy.py  2_train_with_sb3_DDPG.py  3_test_trained_model.py  4_train_with_sb3_DDPG_log.py  5_train_with_sb3_her.py  TrainVizPickAndPlace.ipynb  evaluate.py  example_sb3_her.py  example_sb3_her_panda.py  example_sb3_her_render.py  example_test_panda_reach_sb3.py  example_train_panda_reach_sb3.py  manual_control.py  metadata.json  predict.py  quick_start.py  tensorboard_log.py  test_panda_gym.py  train-panda-gym.py  train.py  train_push.py  train_zoo.ipynb
hyperparams/: tqc.yml
robots/mitsubishi_rv7f_description/: CMakeLists.txt  package.xml
robots/mitsubishi_rv7f_description/launch/rv7f/: rv7f.launch
robots/mitsubishi_rv7f_description/meshes/rv7f/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
robots/mitsubishi_rv7f_description/meshes/rv7f/visual/: base_link.dae  link_2.dae  link_3.dae  link_5.dae  link_6.dae
robots/mitsubishi_rv7f_description/robots/rv7f/: rv7f.urdf.xacro
robots/mitsubishi_rv7f_description/robots/rv7f/urdf/: rv7f.urdf
robots/mitsubishi_rv7f_description/test/rv7f/: rv7f_launch_test.xml
robots/mitsubishi_rv7f_description/urdf/rv7f/: body.transmission.xacro  body.urdf.xacro  rv7f.urdf
(+50 files in other folders)
